Fixed mobile spacing issue

--- a/styling.css
+++ b/styling.css
@@ -15,11 +15,12 @@ body {
     justify-content: center;
     align-items: center;
     font-family: "Outfit";
-    line-height: 150%;
+    /* line-height: 150%; */
 }
 
 h1 {
     font-family: "Young Serif";
+    line-height: 150%;
     color: hsl(24, 5%, 18%);
     margin: 0px;
 }
@@ -28,11 +29,13 @@ h2 {
     font-family: "Young Serif";
     color: hsl(14, 45%, 36%);
     margin: 0px;
+    line-height: 150%;
 }
 
 h3 {
     color: hsl(332, 51%, 32%);
     margin: 0px;
+    line-height: 150%;
 }
 
 p,
@@ -112,6 +115,7 @@ ol li {
 }
 td:nth-child(2) {
     color: hsl(14, 45%, 36%);
+    font-weight: bold;
 }
 
 .nutrition-table tr {
